// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogoutDialog/actions/hideLogoutDialog should hideLogoutDialog should create hideLogoutDialog action 1`] = `
Object {
  "type": "atomicapp/LogoutDialog/LOGOUT_DIALOG_HIDE",
}
`;

exports[`containers/LogoutDialog/actions/showLogoutDialog should showLogoutDialog should create showLogoutDialog action 1`] = `
Object {
  "type": "atomicapp/LogoutDialog/LOGOUT_DIALOG_SHOW",
}
`;
